# c-learning

./: .gitignore  README.md
week1/: hello
week2/: calculator  calculator.c  calculator2  calculator2.c  temperature  temperature.c  types  types.c
week3/: bounds  bounds.c  bubble  bubble.c  bubble.c.save  char_vs_ptr  char_vs_ptr.c  dynamic_scores  dynamic_scores.c  inversion  inversion.c  palindrome  palindrome.c  pointer_intro  pointer_intro.c  ptr_array  ptr_array.c  scores  scores.c  scores2d  scores2d.c
week4/: buggy  buggy.c  delete_value  delete_value.c  dynamic_scores  linked_list  linked_list.c  struct_array  struct_array.c  struct_intro  struct_intro.c  struct_ptr  struct_ptr.c  struct_safe  struct_safe.c  update_name  update_name.c
week5/: CMakeLists.txt  button_led.c  counter_led.c  external_led.c
week6/: CMakeLists.txt  hello_lcd.c
week7/: db_test  db_test.c
